--- a/Terminal punto de venta/Termina PTV.html
+++ b/Terminal punto de venta/Termina PTV.html
@@ -98,15 +98,13 @@
             display: none;
         }
         .close-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
             background-color: red;
             color: white;
             border: none;
-            border-radius: 50%;
+            border-radius: 8px;
             cursor: pointer;
-            padding: 5px 10px;
+            padding: 10px;
+            margin-top: 10px;
         }
         video {
             width: 100%;
@@ -201,8 +199,8 @@
         </div>
 
         <div class="camera-container" id="camera-container">
-            <button class="close-button" onclick="stopCamera()">X</button>
             <video id="video" autoplay></video>
+            <button class="close-button" onclick="stopCamera()">Cerrar Cámara</button>
         </div>
 
         <div class="notification" id="notification">Se ha agregado un producto</div>
