--- a/Terminal punto de venta/Termina PTV.html
+++ b/Terminal punto de venta/Termina PTV.html
@@ -132,6 +132,9 @@
         th {
             background-color: #f2f2f2;
         }
+        .payment-options, .keyboard {
+            display: none; /* Ocultar por defecto */
+        }
     </style>
 </head>
 <body>
