--- a/Termina PTV.html
+++ b/Termina PTV.html
@@ -365,11 +365,11 @@
             return new Promise((resolve) => {
                 setTimeout(() => {
                     const productos = {
-                        'P001': {codigo: 'P001', nombre: 'Rosa Roja', precio: 5.99},
-                        'P002': {codigo: 'P002', nombre: 'Orquídea Blanca', precio: 15.99},
-                        'P003': {codigo: 'P003', nombre: 'Cactus Pequeño', precio: 3.99},
-                        'P004': {codigo: 'P004', nombre: 'Helecho Boston', precio: 8.99},
-                        'P005': {codigo: 'P005', nombre: 'Lirio Asiático', precio: 6.99}
+                        '1': {codigo: '1', nombre: 'Rosa Roja', precio: 5.99},
+                        '2': {codigo: '2', nombre: 'Orquídea Blanca', precio: 15.99},
+                        '3': {codigo: '3', nombre: 'Cactus Pequeño', precio: 3.99},
+                        '4': {codigo: '4', nombre: 'Helecho Boston', precio: 8.99},
+                        '5': {codigo: '5', nombre: 'Lirio Asiático', precio: 6.99}
                     };
                     resolve(productos[codigo]);
                 }, 300);
