--- a/Termina PTV.html
+++ b/Termina PTV.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!DOCTYPE html> //Esta version del codigo ya escanea codigos QR el problema es que lo hace de manera infinita hay que 
+                    establecer un limita  de 1 sola lectura del codigo y permita escaear otra o nuevamente el mismo, hay que arreglar el estilo 
+                    de los metodos  de pago y cuando se agregre un codigo se debe comparar con los registros en la base de datos.
 <html lang="es">
 <head>
     <meta charset="UTF-8">
